Updated documentation to reflect use of Java 11-ea.